[metadata]
name = MultiDBConnector
version = 0.0.1
description = A package to connect to multiple databases.
author = sidhyaashu
author_email = ashutoshsidhya69@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = src
install_requires =
    pymongo
    mysql-connector-python
    psycopg2-binary
    pinecone-client

[options.extras_require]
dev =
    pytest
    tox
    flake8

[options.packages.find]
where = src
